add other styling stuff

--- a/webclient/src/components/CreationPage/CreationPage.css
+++ b/webclient/src/components/CreationPage/CreationPage.css
@@ -1,1 +1,10 @@
-.CreationPage {}
+.creation-page-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+}
+
+h2 {
+    margin-top: 20px;
+}
